--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Wayv & Mulfyx",
   "license": "Apache-2.0",
   "dependencies": {
+    "chalk": "^4.1.1",
     "dotenv": "^10.0.0",
     "eris": "^0.15.1",
     "loglevel": "^1.7.1"
