--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "chalk": "^4.1.1",
     "dotenv": "^10.0.0",
     "eris": "^0.15.1",
+    "express": "^4.17.1",
     "loglevel": "^1.7.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.12",
     "@types/node": "^15.12.0",
     "@types/ws": "^7.4.4",
     "typescript": "^4.3.2"
