--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./build/src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "author": "Wayv & Mulfyx",
   "license": "Apache-2.0",
@@ -19,6 +20,7 @@
     "@types/express": "^4.17.12",
     "@types/node": "^15.12.0",
     "@types/ws": "^7.4.4",
+    "husky": "^6.0.0",
     "typescript": "^4.3.2"
   }
 }
